--- a/gradle/scripts/dependencyDefinitions.gradle
+++ b/gradle/scripts/dependencyDefinitions.gradle
@@ -77,6 +77,10 @@ ext.externalDependency = [
     "kafka09": "org.apache.kafka:kafka_2.11:" + kafka09Version,
     "kafka09Test": "org.apache.kafka:kafka_2.11:" + kafka09Version + ":test",
     "kafka09Client": "org.apache.kafka:kafka-clients:" + kafka09Version,
+    "kafka011": "org.apache.kafka:kafka_2.11:" + kafka011Version,
+    "kafka011Test": "org.apache.kafka:kafka_2.11:" + kafka011Version + ":test",
+    "kafka011Client": "org.apache.kafka:kafka-clients:" + kafka011Version,
+    "kafka011ClientTest": "org.apache.kafka:kafka-clients:" + kafka011Version + ":test",
     "confluentSchemaRegistryClient": "io.confluent:kafka-schema-registry-client:" + confluentVersion,
     "confluentAvroSerializer": "io.confluent:kafka-avro-serializer:" + confluentVersion,
     "confluentJsonSerializer": "io.confluent:kafka-json-serializer:" + confluentVersion,
