--- a/gobblin-distribution/gobblin-flavor-custom.gradle
+++ b/gobblin-distribution/gobblin-flavor-custom.gradle
@@ -34,6 +34,7 @@ dependencies {
   // Kafka integration (source, writer, metrics) -- choose one
   // compile project(':gobblin-modules:gobblin-kafka-08')
   // compile project(':gobblin-modules:gobblin-kafka-09')
+  // compile project(':gobblin-modules:gobblin-kafka-011')
 
   // Gobblin Helix modules
   // compile project(':gobblin-modules:gobblin-helix')
