--- a/gobblin-distribution/gobblin-flavor-standard.gradle
+++ b/gobblin-distribution/gobblin-flavor-standard.gradle
@@ -1,4 +1,5 @@
 /*
+
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -19,6 +20,14 @@ dependencies {
   compile project(':gobblin-example')
   compile project(':gobblin-modules:gobblin-azkaban')
   compile project(':gobblin-modules:gobblin-crypto-provider')
-  compile project(':gobblin-modules:gobblin-kafka-08')
+  if (project.hasProperty('kafka09')) {
+    compile project(':gobblin-modules:gobblin-kafka-09')
+  }
+  else if (project.hasProperty('kafka011')) {
+    compile project(':gobblin-modules:gobblin-kafka-011')
+  }
+  else {
+    compile project(':gobblin-modules:gobblin-kafka-08')
+  }
   compile project(':gobblin-modules:google-ingestion')
 }
