--- a/gobblin-modules/gobblin-kafka-09/build.gradle
+++ b/gobblin-modules/gobblin-kafka-09/build.gradle
@@ -24,6 +24,8 @@ dependencies {
   compile project(":gobblin-metrics-libs:gobblin-metrics")
 
   compile externalDependency.avro
+  compile externalDependency.confluentAvroSerializer
+  compile externalDependency.confluentJsonSerializer
   compile externalDependency.jacksonCore
   compile externalDependency.jacksonMapper
   compile externalDependency.commonsHttpClient
@@ -52,6 +54,7 @@ dependencies {
 
   testCompile project(":gobblin-runtime")
   testCompile project(":gobblin-test-utils")
+  testCompile project(":gobblin-modules:gobblin-kafka-common").sourceSets.test.output
   testCompile externalDependency.jsonAssert
   testCompile externalDependency.mockito
   testCompile externalDependency.testng
