--- a/gradle/scripts/defaultBuildProperties.gradle
+++ b/gradle/scripts/defaultBuildProperties.gradle
@@ -24,7 +24,7 @@ def BuildProperties BUILD_PROPERTIES = new BuildProperties(project)
     .register(new BuildProperty("avroVersion", "1.8.1", "Avro dependencies version"))
     .register(new BuildProperty("awsVersion", "1.11.8", "AWS dependencies version"))
     .register(new BuildProperty("bytemanVersion", "2.2.1", "Byteman dependencies version"))
-    .register(new BuildProperty("confluentVersion", "2.0.1", "confluent dependencies version"))
+    .register(new BuildProperty("confluentVersion", "3.2.2", "confluent dependencies version"))
     .register(new BuildProperty("doNotSignArtifacts", false, "Do not sight Maven artifacts"))
     .register(new BuildProperty("gobblinFlavor", "standard", "Build flavor (see http://gobblin.readthedocs.io/en/latest/developer-guide/GobblinModules/)"))
     .register(new BuildProperty("hadoopVersion", "2.3.0", "Hadoop dependencies version"))
@@ -33,6 +33,7 @@ def BuildProperties BUILD_PROPERTIES = new BuildProperties(project)
     "Java languange compatibility; supported versions: " + JavaVersion.VERSION_1_8))
     .register(new BuildProperty("kafka08Version", "0.8.2.2", "Kafka 0.8 dependencies version"))
     .register(new BuildProperty("kafka09Version", "0.9.0.1", "Kafka 0.9 dependencies version"))
+    .register(new BuildProperty("kafka011Version", "0.11.0.0", "Kafka 0.11 dependencies version"))
     .register(new BuildProperty("pegasusVersion", "11.0.0", "Pegasus dependencies version"))
     .register(new BuildProperty("publishToMaven", false, "Enable publishing of artifacts to a central Maven repository"))
     .register(new BuildProperty("salesforceVersion", "37.0.3", "Salesforce dependencies version"))
@@ -60,6 +61,7 @@ BUILD_PROPERTIES.ensureDefined('hadoopVersion')
 BUILD_PROPERTIES.ensureDefined('hiveVersion')
 BUILD_PROPERTIES.ensureDefined('kafka08Version')
 BUILD_PROPERTIES.ensureDefined('kafka09Version')
+BUILD_PROPERTIES.ensureDefined('kafka011Version')
 BUILD_PROPERTIES.ensureDefined('pegasusVersion')
 BUILD_PROPERTIES.ensureDefined('salesforceVersion')
 
